@@ -1,3 +1,15 @@
+2012-08-20  Shawn Singh  <shawnsingh@chromium.org>
+
+        [chromium] CCMathUtilTest.smallestAngleBetweenVectors unit test failing
+        https://bugs.webkit.org/show_bug.cgi?id=94502
+
+        Reviewed by Kenneth Russell.
+
+        The test needed to use EXPECT_FLOAT_EQ instead of EXPECT_EQ. In
+        this patch, the test is also re-enabled.
+
+        * tests/CCMathUtilTest.cpp:
+
 2012-08-20  Leandro Gracia Gil  <leandrogracia@chromium.org>
 
         Move transformFriendlyBoundingBox out of Range
